# dlib-serving

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  build-docker.sh  build.sh  face_detection_client.cc  face_detection_server.cc  face_detection_service.cc  face_detection_service.h  inference.grpc.pb.cc  inference.grpc.pb.h  inference.pb.cc  inference.pb.h  inference.proto  jpeg_loader.cc  jpeg_loader.h  server.cc  shape_detection_server.cc  shape_detection_service.cc  shape_detection_service.h  train_shape_predictor.cc
kubernetes/face-detection-server/: deployment.yaml  service.yaml
kubernetes/shape-detection-server/: deployment.yaml  service.yaml
